--- a/Camouflage XML Editor/MainWindow.xaml
+++ b/Camouflage XML Editor/MainWindow.xaml
@@ -125,9 +125,9 @@
                     <Rectangle x:Name="RectCurrent0" Grid.Column="1" Grid.Row="0" Margin="5" />
                     <Rectangle x:Name="RectPrevious0" Grid.Column="1" Grid.Row="1" Margin="5"/>
                     <Rectangle x:Name="RectDefault0" Grid.Column="1" Grid.Row="2" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="0" Content="Modify" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="1" Content="Apply" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="2" Content="Apply" Margin="5"/>
+                    <Button Grid.Column="2" Grid.Row="0" Content="Modify" Margin="5" Tag="current_0"/>
+                    <Button Grid.Column="2" Grid.Row="1" Content="Apply" Margin="5" Tag="previous_0"/>
+                    <Button Grid.Column="2" Grid.Row="2" Content="Apply" Margin="5" Tag="default_0"/>
                 </Grid>
             </TabItem>
 
@@ -152,13 +152,13 @@
                     <Rectangle x:Name="RectCurrent1" Grid.Column="1" Grid.Row="0" Margin="5"/>
                     <Rectangle x:Name="RectPrevious1" Grid.Column="1" Grid.Row="1" Margin="5"/>
                     <Rectangle x:Name="RectDefault1" Grid.Column="1" Grid.Row="2" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="0" Content="Modify" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="1" Content="Apply" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="2" Content="Apply" Margin="5"/>
+                    <Button Grid.Column="2" Grid.Row="0" Content="Modify" Margin="5" Tag="current_1"/>
+                    <Button Grid.Column="2" Grid.Row="1" Content="Apply" Margin="5" Tag="previous_1"/>
+                    <Button Grid.Column="2" Grid.Row="2" Content="Apply" Margin="5" Tag="default_1"/>
                 </Grid>
             </TabItem>
 
-            <TabItem Header="Color2" x:Name="tabColor2">
+            <TabItem Header="Color2" x:Name="tabColor2" Tag="">
                 <Grid x:Name="GridColor2" Margin="10">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="122"/>
@@ -179,13 +179,13 @@
                     <Rectangle x:Name="RectCurrent2" Grid.Column="1" Grid.Row="0" Margin="5"/>
                     <Rectangle x:Name="RectPrevious2" Grid.Column="1" Grid.Row="1" Margin="5"/>
                     <Rectangle x:Name="RectDefault2" Grid.Column="1" Grid.Row="2" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="0" Content="Modify" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="1" Content="Apply" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="2" Content="Apply" Margin="5"/>
+                    <Button Grid.Column="2" Grid.Row="0" Content="Modify" Margin="5" Tag="current_2"/>
+                    <Button Grid.Column="2" Grid.Row="1" Content="Apply" Margin="5" Tag="previous_2"/>
+                    <Button Grid.Column="2" Grid.Row="2" Content="Apply" Margin="5" Tag="default_2"/>
                 </Grid>
             </TabItem>
 
-            <TabItem Header="Color3" x:Name="tabColor3">
+            <TabItem Header="Color3" x:Name="tabColor3" Tag="">
                 <Grid x:Name="GridColor3" Margin="10">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="122"/>
@@ -206,13 +206,13 @@
                     <Rectangle x:Name="RectCurrent3" Grid.Column="1" Grid.Row="0" Margin="5"/>
                     <Rectangle x:Name="RectPrevious3" Grid.Column="1" Grid.Row="1" Margin="5"/>
                     <Rectangle x:Name="RectDefault3" Grid.Column="1" Grid.Row="2" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="0" Content="Modify" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="1" Content="Apply" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="2" Content="Apply" Margin="5"/>
+                    <Button Grid.Column="2" Grid.Row="0" Content="Modify" Margin="5" Tag="current_3"/>
+                    <Button Grid.Column="2" Grid.Row="1" Content="Apply" Margin="5" Tag="previous_3"/>
+                    <Button Grid.Column="2" Grid.Row="2" Content="Apply" Margin="5" Tag="default_3"/>
                 </Grid>
             </TabItem>
 
-            <TabItem Header="ColorUI" x:Name="tabColorUi">
+            <TabItem Header="ColorUI" x:Name="tabColorUi" Tag="">
                 <Grid x:Name="GridColorUi" Margin="10">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="122"/>
@@ -233,9 +233,9 @@
                     <Rectangle x:Name="RectCurrentUi" Grid.Column="1" Grid.Row="0" Margin="5"/>
                     <Rectangle x:Name="RectPreviousUi" Grid.Column="1" Grid.Row="1" Margin="5"/>
                     <Rectangle x:Name="RectDefaultUi" Grid.Column="1" Grid.Row="2" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="0" Content="Modify" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="1" Content="Apply" Margin="5"/>
-                    <Button Grid.Column="2" Grid.Row="2" Content="Apply" Margin="5"/>
+                    <Button Grid.Column="2" Grid.Row="0" Content="Modify" Margin="5" Tag="current_ui"/>
+                    <Button Grid.Column="2" Grid.Row="1" Content="Apply" Margin="5" Tag="previous_ui"/>
+                    <Button Grid.Column="2" Grid.Row="2" Content="Apply" Margin="5" Tag="default_ui"/>
                 </Grid>
             </TabItem>
         </TabControl>
