--- a/Camouflage XML Editor/App.xaml
+++ b/Camouflage XML Editor/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="TestProject.App"
+﻿<Application x:Class="CamouflageXmlEditor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TestProject"
+             xmlns:local="clr-namespace:CamouflageXmlEditor"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
